Fix HealthCare.gov theme text wrapping
Don't constrain the theme/version section more than we need to

--- a/packages/docs/src/styles/components/navigation.scss
+++ b/packages/docs/src/styles/components/navigation.scss
@@ -52,7 +52,7 @@
 }
 
 .c-navigation__switchers-wrapper {
-  padding: $spacer-3 $spacer-4;
+  padding: $spacer-3 $spacer-2 $spacer-3 $spacer-4;
 }
 
 .c-navigation__settings-button {
